--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Cascadia Code', monospace;
   border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 
   .qc-logo {
@@ -60,8 +60,9 @@
         font-weight: 600;
         text-decoration: none;
         color: inherit;
-        font-family: inherit;
+        font-family: 'Cascadia Code', monospace;
         position: relative;
+        font-size: 18px;
 
         &::after {
           content: '';
