--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -14,14 +14,34 @@
   }
 }
 
+.my-icon {
+  width: 4rem;  
+  height: 4rem;
+}
+
+
 .qc-header {
   padding: 1rem 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-family: 'Cascadia Code', monospace;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+  border-bottom: 1px solid rgb(0, 0, 0);
+  transition: all 0.3s ease;
+  background-color: #ffffff;
 
+  &.fixed-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 97%;
+    z-index: 50;
+  }
+
+  &.relative-header {
+    position: relative;
+  }
+}
   .qc-logo {
     display: flex;
     align-items: center;
@@ -62,7 +82,7 @@
         color: inherit;
         font-family: 'Cascadia Code', monospace;
         position: relative;
-        font-size: 18px;
+        font-size: 20px;
 
         &::after {
           content: '';
@@ -81,4 +101,4 @@
       }
     }
   }
-}
+
