fixes and added csv logic

--- a/src/styles/HeroSection.scss
+++ b/src/styles/HeroSection.scss
@@ -91,6 +91,7 @@
           border: none;
           color: #000000;
           text-align: center;
+          font-family: Montserrat, sans-serif;
         }
 
         .glass-card {
@@ -124,14 +125,14 @@
 }
 
 .pathway-boxes .box-red {
-    background: linear-gradient(45deg, #ff0048, #ff79a6);
+    background: linear-gradient(45deg, #ffb3cc, #fd5176);
 }
 .pathway-boxes .box-blue {
-    background: linear-gradient(45deg, #0072ff, #00c6ff);
+    background: linear-gradient(45deg, #96c7fc, #0070c0);
 }
 .pathway-boxes .box-green {
-    background: linear-gradient(45deg, #00ff87, #66ff99);
+    background: linear-gradient(45deg, #c2f1c8, #199f76);
 }
 .pathway-boxes .box-yellow {
-    background: linear-gradient(45deg, #ffcc00, #ffee58);
+    background: linear-gradient(45deg, #cdc2fe, #896efe);
 }
