--- a/src/styles/HeroSection.scss
+++ b/src/styles/HeroSection.scss
@@ -126,20 +126,23 @@
 }
 
 .pathway-boxes .box-red {
-    background: #fd5176;
-    border: 1rem solid #fca5b4;
+    background: #2d583d;
+    border: 1rem solid #a6d8c0;
+    color: #a6d8c0;
 }
 .pathway-boxes .box-blue {
-    background: #0070c0;
-    border:1rem solid #96c7fc;
+    background: #600000;
+    border:1rem solid #fecccc;
+    color: #fecccc;
 }
 .pathway-boxes .box-green {
-    background: #199f76;
-    border: 1rem solid #c2f1c8;
+    background: #130388;
+    border: 1rem solid #c2c0fe;
+    color: #c2c0fe;
 }
 .pathway-boxes .box-yellow {
     
-  background: #896efe;
-  border: 1rem solid #cdc2fe;
-
+  background: #aec106;
+  border: 1rem solid #ffffb3;
+  color: #ffffb3;
 }
