--- a/src/styles/HeroSection.scss
+++ b/src/styles/HeroSection.scss
@@ -107,6 +107,8 @@
     margin-top: 1rem;
     width: 100%;
     max-width: 1300px;
+    text-decoration: none;
+
 }
 
 .pathway-boxes .box {
@@ -129,20 +131,24 @@
     background: #2d583d;
     border: 1rem solid #a6d8c0;
     color: #a6d8c0;
+    text-decoration: none;
 }
 .pathway-boxes .box-blue {
     background: #600000;
     border:1rem solid #fecccc;
     color: #fecccc;
+    text-decoration: none;
 }
 .pathway-boxes .box-green {
     background: #130388;
     border: 1rem solid #c2c0fe;
     color: #c2c0fe;
+    text-decoration: none;
 }
 .pathway-boxes .box-yellow {
     
   background: #aec106;
   border: 1rem solid #ffffb3;
   color: #ffffb3;
+  text-decoration: none;
 }
